tests/fixtures/positive/release-engineering/test-fixture-accessed-from-production/app/src/testFixtures/kotlin/com/example/SamePackageFixture.kt
package com.example

class SamePackageFixture

