tests/fixtures/negative/supply-chain/convention-plugin-applied-to-wrong-target/androidlib/src/main/kotlin/com/example/androidlib/AndroidModule.kt
package com.example.androidlib

class AndroidModule
